# BlogSampleCode

./: .gitignore  README.md
address-sanitizer/: CMakeLists.txt  global-buffer-overflow.cpp  init-order.cpp  memory-leak.cpp  out-of-bound.cpp  stack-buffer-overflow.cpp  use-after-free.cpp  use-after-return.cpp  use-after-scope.cpp
algorithm/Graph/: AdjList.ixx  AdjMatrix.ixx  BFS.ixx  BellmanFord.ixx  Bipartite.ixx  CC.ixx  CMakeLists.txt  DFS.ixx  Dijkstra.ixx  FloydWarshall.ixx  GraphInterface.ixx  Hierholzer.ixx  Hungarian.ixx  Kosaraju.ixx  Kruskal.ixx  LC785.cpp  Prim.ixx  Tarjan.ixx  TopologicalSort.ixx  UnionFind.ixx  readme.md
algorithm/Graph/Applications/: APSPDemo.cpp  AdjListDemo.cpp  AdjMatrixDemo.cpp  BFSDemo.cpp  BellmanFordDemo.cpp  CMakeLists.txt  DFSDemo.cpp  EulerDemo.cpp  HungarianDemo.cpp  SCCDemo.cpp  TopoDemo.cpp  lc.cpp  lc684.cpp
algorithm/Graph/unittest/: CMakeLists.txt  testAdjList.cpp  testAdjMatrix.cpp
atomic/: CMakeLists.txt  atomic.cpp  compare_exchange_strong.cpp  exchange.cpp  id_generator.cpp  id_generator2.cpp  task_mgr.cpp  wait_notify.cpp
attributes/: CMakeLists.txt  assume.cpp  carries_dependency.cpp  deprecated.cpp  fallthrough.cpp  maybe_unused.cpp  no_unique_address.cpp  nodiscard.cpp  nodiscard20.cpp
basics-lambda/: CMakeLists.txt  e1_sort.cpp  e2_algo.cpp  e3_capture.cpp  e4_high_order.cpp  e5_generic.cpp
basics-move/: after_move.cpp  invalid_move.cpp  main.cpp  move_imple.cpp
build-optimize/: CMakeLists.txt  Makefile  constexpr.cpp  demo.cpp  pch.h  prep_main.cpp  template.cpp
cast/: 1-implicit-conversion.cpp  10-member-overload.cpp  11-dynamic_cast.cpp  12-reinterpret_cast.cpp  13-reinterpret-cast-private.cpp  14-type-aliasing.cpp  2-arithmetic-conversion.cpp  3-signed-conversion.cpp  4-user-conversion.cpp  5-static_cast.cpp  6-multi-hops.cpp  7-inheritance.cpp  8-downcasting.cpp  9-const_cast.cpp  CMakeLists.txt  c_style.cpp  c_style2.cpp
cmake/demo1/: CMakeLists.txt  main.cpp
cmake/demo2/: CMakeLists.txt  main.cpp
cmake/demo3/: CMakeLists.txt  test.cpp
compiler-optimization/: LoopUnrolling.cpp.cpp  constant_folding.cpp  dead.cpp  forever_true.cpp  inline.cpp  invalid_loop.cpp  tail_recursion.cpp  unused.cpp  vectorazation.cpp
condition-variable-and-semaphore/: CMakeLists.txt  condition_variable.cpp  semaphore.cpp
const-vs-constexpr/: CMakeLists.txt  class_member.cpp  class_member_constexpr.cpp  function.cpp  pointer.cpp  pointer_constexpr.cpp  reference.cpp  reference_constexpr.cpp  storage.cpp  variable.cpp
constexpr/: CMakeLists.txt  constexpr.cpp  constexpr1.cpp  constexpr2.cpp  constexpr3.cpp  constexpr4.cpp
cooperative-cancellation/: CMakeLists.txt  readme.md  stop_callback.cpp  stop_source.cpp  stop_token.cpp
coroutines/: CMakeLists.txt  async_task.cpp  coreturn.cpp  coro.cpp  coyield.cpp  coyield2.cpp  echo_server.cpp  generator.cpp
cpp17-filesystem/: CMakeLists.txt  error.cpp  list.cpp  path.cpp  stat.cpp  symlink.cpp  usage.cpp
cpp20-format/: CMakeLists.txt  CMakePresets.json  custom.cpp  fmt_demo.cpp  format.cpp  print.cpp  println.cpp
cpp20-spaceship/: CMakeLists.txt  partial_order.cpp  spaceship.cpp  strong_equality.cpp  strong_order.cpp  traditional.cpp  weak_equality.cpp  weak_order.cpp
cpp20-sync-stream/: CMakeLists.txt  cout_sample.cpp  osyncstream.cpp  readme.md
cpp23-deducing-this/: CMakeLists.txt  example.cpp
cpp23-flat-map-set/: CMakeLists.txt  flat_map.cpp  flat_set.cpp
cppinsight/: constexpr_if.cpp  default_parameter.cpp  for_loop.cpp  inhritate.cpp  life_time.cpp  padding.cpp  template_expand.cpp
date-time/: CMakeLists.txt  clock.cpp  date.cpp  duration.cpp  execution_time.cpp  ratio.cpp  readme.md  sys_days.cpp  timepoint.cpp  timezone.cpp
deducing-this/: CMakeLists.txt  const.cpp  const_dt.cpp  crtp.cpp  crtp_dt.cpp  lr.cpp  lr_dt.cpp  pf.cpp  pf_dt.cpp  tc.cpp  tc_dt.cpp
ebpf/: hello-buffer.py  hello-map.py  hello-tail.py  hello.py
exception/: CMakeLists.txt  catch.cpp  exception.cpp  readme.md  terminate.cpp  unwinding.cpp
execution/: CMakeLists.txt  execution.cpp  readme.md  reduce.cpp
expected/: CMakeLists.txt  and_then.cpp  expect.cpp  or_else.cpp  readme.md  transform.cpp  transform_error.cpp
google-test/: CMakeLists.txt  app.h  app_test.cpp  basic.cpp  exception.cpp  exit.cpp  interface.h
iterator/: CMakeLists.txt  bidirectional_iterators.cpp  forward_iterators.cpp  iterator.cpp  random_iterator.cpp
jthread/: CMakeLists.txt  jthread.cpp  stop_callback.cpp  stop_source.cpp  stop_token.cpp  thread_issue.cpp
module/: CMakeLists.txt  complex_main.cpp  export_group.cpp  export_namespace.cpp  export_specifier.cpp  partition.ixx  partition_part1.ixx  separate_impl.ixx  simple_main.cpp  sort.ixx  sort_quick.ixx
module/complex/: CMakeLists.txt  complex.ixx
module/partition/: CMakeLists.txt  partition_main.cpp  partition_part2.ixx
module/separate/: CMakeLists.txt  separate_interface.ixx  separate_main.cpp
module/simple/: CMakeLists.txt  simple.ixx
module/submodule/: CMakeLists.txt  sort_bubble.ixx  sort_insert.ixx  sort_main.cpp
multithreading/: 0_naive_sample.cpp  1_mutex_sample.cpp  2_shared_mutex_sample.cpp  3_scoped_lock.cpp  4_recursive_mutex_sample.cpp  CMakeLists.txt  prompt.txt  seq.puml  timed_mutex_sample.cpp
overload-resolution/: CMakeLists.txt  example1.cpp  example2A.cpp  example3.cpp  example4B.cpp  example5.cpp  exampleC.cpp  exampleD.cpp  exampleE.cpp  exampleF.cpp  exampleG.cpp  exampleH.cpp  exampleJ.cpp  invalid.cpp  overload_error.cpp  qualification_adjustments.cpp.cpp  sample.cpp
rapidjson/: CMakeLists.txt  basic.cpp  generate.cpp  jsonpath.cpp  jsonpath.json  nested.cpp  nested.json  parse.cpp  parse.json  print.h  sample.json
stl-algorithms/: 01batch.cpp  02check.cpp  03find.cpp  04count.cpp  05compare.cpp  06fold.cpp  07copymove.cpp  08swap.cpp  09transform.cpp  10replace.cpp  11generate.cpp  12remove.cpp  13order.cpp  14sample.cpp  15partition.cpp  16sort.cpp  17binarysearch.cpp  18set.cpp  19merge.cpp  20heap.cpp  21minmax.cpp  22lex.cpp  23permutation.cpp  24numeric.cpp  CMakeLists.txt
(+89 files in other folders)
